Spec file update and auth refactor
